// lighthouse.sqlite — generated by docs/erd/generate_lighthouse_erd.py
// PK: from SQLite when declared; otherwise first column (logical id).
// FK: from SQLite foreign_key_list when present; else inferred from column names.

Table donation_allocations {
  allocation_id text [pk, note: 'logical PK']
  donation_id text [ref: > donations.donation_id]
  safehouse_id text [ref: > safehouses.safehouse_id]
  program_area text
  amount_allocated text
  allocation_date text
  allocation_notes text
}

Table donations {
  donation_id text [pk, note: 'logical PK']
  supporter_id text [ref: > supporters.supporter_id]
  donation_type text
  donation_date text
  is_recurring text
  campaign_name text
  channel_source text
  currency_code text
  amount text
  estimated_value text
  impact_unit text
  notes text
  referral_post_id text [ref: > social_media_posts.post_id]
}

Table education_records {
  education_record_id text [pk, note: 'logical PK']
  resident_id text [ref: > residents.resident_id]
  record_date text
  education_level text
  school_name text
  enrollment_status text
  attendance_rate text
  progress_percent text
  completion_status text
  notes text
}

Table health_wellbeing_records {
  health_record_id text [pk, note: 'logical PK']
  resident_id text [ref: > residents.resident_id]
  record_date text
  general_health_score text
  nutrition_score text
  sleep_quality_score text
  energy_level_score text
  height_cm text
  weight_kg text
  bmi text
  medical_checkup_done text
  dental_checkup_done text
  psychological_checkup_done text
  notes text
}

Table home_visitations {
  visitation_id text [pk, note: 'logical PK']
  resident_id text [ref: > residents.resident_id]
  visit_date text
  social_worker text
  visit_type text
  location_visited text
  family_members_present text
  purpose text
  observations text
  family_cooperation_level text
  safety_concerns_noted text
  follow_up_needed text
  follow_up_notes text
  visit_outcome text
}

Table in_kind_donation_items {
  item_id text [pk, note: 'logical PK']
  donation_id text [ref: > donations.donation_id]
  item_name text
  item_category text
  quantity text
  unit_of_measure text
  estimated_unit_value text
  intended_use text
  received_condition text
}

Table incident_reports {
  incident_id text [pk, note: 'logical PK']
  resident_id text [ref: > residents.resident_id]
  safehouse_id text [ref: > safehouses.safehouse_id]
  incident_date text
  incident_type text
  severity text
  description text
  response_taken text
  resolved text
  resolution_date text
  reported_by text
  follow_up_required text
}

Table intervention_plans {
  plan_id text [pk, note: 'logical PK']
  resident_id text [ref: > residents.resident_id]
  plan_category text
  plan_description text
  services_provided text
  target_value text
  target_date text
  status text
  case_conference_date text
  created_at text
  updated_at text
}

Table partner_assignments {
  assignment_id text [pk, note: 'logical PK']
  partner_id text [ref: > partners.partner_id]
  safehouse_id text [ref: > safehouses.safehouse_id]
  program_area text
  assignment_start text
  assignment_end text
  responsibility_notes text
  is_primary text
  status text
}

Table partners {
  partner_id text [pk, note: 'logical PK']
  partner_name text
  partner_type text
  role_type text
  contact_name text
  email text
  phone text
  region text
  status text
  start_date text
  end_date text
  notes text
}

Table process_recordings {
  recording_id text [pk, note: 'logical PK']
  resident_id text [ref: > residents.resident_id]
  session_date text
  social_worker text
  session_type text
  session_duration_minutes text
  emotional_state_observed text
  emotional_state_end text
  session_narrative text
  interventions_applied text
  follow_up_actions text
  progress_noted text
  concerns_flagged text
  referral_made text
  notes_restricted text
}

Table public_impact_snapshots {
  snapshot_id text [pk, note: 'logical PK']
  snapshot_date text
  headline text
  summary_text text
  metric_payload_json text
  is_published text
  published_at text
}

Table residents {
  resident_id text [pk, note: 'logical PK']
  case_control_no text
  internal_code text
  safehouse_id text [ref: > safehouses.safehouse_id]
  case_status text
  sex text
  date_of_birth text
  birth_status text
  place_of_birth text
  religion text
  case_category text
  sub_cat_orphaned text
  sub_cat_trafficked text
  sub_cat_child_labor text
  sub_cat_physical_abuse text
  sub_cat_sexual_abuse text
  sub_cat_osaec text
  sub_cat_cicl text
  sub_cat_at_risk text
  sub_cat_street_child text
  sub_cat_child_with_hiv text
  is_pwd text
  pwd_type text
  has_special_needs text
  special_needs_diagnosis text
  family_is_4ps text
  family_solo_parent text
  family_indigenous text
  family_parent_pwd text
  family_informal_settler text
  date_of_admission text
  age_upon_admission text
  present_age text
  length_of_stay text
  referral_source text
  referring_agency_person text
  date_colb_registered text
  date_colb_obtained text
  assigned_social_worker text
  initial_case_assessment text
  date_case_study_prepared text
  reintegration_type text
  reintegration_status text
  initial_risk_level text
  current_risk_level text
  date_enrolled text
  date_closed text
  created_at text
  notes_restricted text
}

Table safehouse_monthly_metrics {
  metric_id text [pk, note: 'logical PK']
  safehouse_id text [ref: > safehouses.safehouse_id]
  month_start text
  month_end text
  active_residents text
  avg_education_progress text
  avg_health_score text
  process_recording_count text
  home_visitation_count text
  incident_count text
  notes text
}

Table safehouses {
  safehouse_id text [pk, note: 'logical PK']
  safehouse_code text
  name text
  region text
  city text
  province text
  country text
  open_date text
  status text
  capacity_girls text
  capacity_staff text
  current_occupancy text
  notes text
}

Table social_media_posts {
  post_id text [pk, note: 'logical PK']
  platform text
  platform_post_id text
  post_url text
  created_at text
  day_of_week text
  post_hour text
  post_type text
  media_type text
  caption text
  hashtags text
  num_hashtags text
  mentions_count text
  has_call_to_action text
  call_to_action_type text
  content_topic text
  sentiment_tone text
  caption_length text
  features_resident_story text
  campaign_name text
  is_boosted text
  boost_budget_php text
  impressions text
  reach text
  likes text
  comments text
  shares text
  saves text
  click_throughs text
  video_views text
  engagement_rate text
  profile_visits text
  donation_referrals text
  estimated_donation_value_php text
  follower_count_at_post text
  watch_time_seconds text
  avg_view_duration_seconds text
  subscriber_count_at_post text
  forwards text
}

Table supporters {
  supporter_id text [pk, note: 'logical PK']
  supporter_type text
  display_name text
  organization_name text
  first_name text
  last_name text
  relationship_type text
  region text
  country text
  email text
  phone text
  status text
  created_at text
  first_donation_date text
  acquisition_channel text
}
